force-app/main/default/objects/Training_Program__c/Training_Program__c.object-meta.xml
<CustomObject>
    <label>Training Program</label>
    <nameField>
        <label>Training Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>