force-app/main/default/objects/Training_Program__c/fields/Cost_by_level__c.field-meta.xml
<CustomField>
    <fullName>Cost_by_level__c</fullName>
    <formula>CASE( Level__c , &apos;1&apos;, 200, &apos;2&apos;, 400, &apos;3&apos;, 600, &apos;4&apos;, 800, &apos;5&apos;, 1000,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost by level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>