force-app/main/default/objects/Training_Program__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Livelli di skill del programma di tennis</description>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Entry</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Professional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>