force-app/main/default/objects/Training_Program__c/fields/Number_of_partecipants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_partecipants__c</fullName>
    <defaultValue>0</defaultValue>
    <description>il numero dei partecipanti al Programma di Tennis</description>
    <label>Number of partecipants</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>