force-app/main/default/objects/Training_Program__c/fields/Seniority_Level_Number__c.field-meta.xml
<CustomField>
    <fullName>Level_Number__c</fullName>
    <formula>Value(Text(Level__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seniority_Level_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>