force-app/main/default/objects/Training_Program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparing</fullName>
                <default>true</default>
                <label>Preparing</label>
            </value>
            <value>
                <fullName>Designed</fullName>
            </value>
            <value>
                <fullName>Doing</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>