force-app/main/default/objects/Training_Program__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF( Cost_by_level__c!=-1, IF(RecordType.Name==&apos;Private&apos;, 500 + Cost_by_level__c , IF(RecordType.Name==&apos;Public&apos;, 200 + Cost_by_level__c, -1)  ), -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>