force-app/main/default/objects/Training_Program__c/recordTypes/Private.recordType-meta.xml
<RecordType>
    <fullName>Private</fullName>
    <active>true</active>
    <description>programma di training svolto con un singolo partecipante</description>
    <label>Private</label>
</RecordType>