force-app/main/default/objects/Training_Program__c/recordTypes/Public.recordType-meta.xml
<RecordType>
    <fullName>Public</fullName>
    <active>true</active>
    <description>Training program svolto con più di 1 partecipante fino ad un massimo di 3</description>
    <label>Public</label>
</RecordType>