force-app/main/default/objects/Training_Program__c/validationRules/no_more_than_3.validationRule-meta.xml
<ValidationRule>
    <fullName>no_more_than_3</fullName>
    <active>true</active>
    <description>max number is 3</description>
    <errorConditionFormula>Number_of_partecipants__c &gt; 3</errorConditionFormula>
    <errorDisplayField>Number_of_partecipants__c</errorDisplayField>
    <errorMessage>il numero massimo dei partecipanti è 3</errorMessage>
</ValidationRule>